[package]
name = "usmbreak"
version = "0.1.2"
authors = ["beerpsi <beerpsi@duck.com>"]
edition = "2021"
description = "Encrypt and decrypt CRIWARE USM files"
readme = "README.md"
repository = "https://github.com/beerpiss/usmbreak"
license = "0BSD"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
clap-num = "1.1.1"
dialoguer = "0.11.0"
indicatif = "0.17.8"
